middle-end: rejects loops with nonlinear inductions and early breaks [PR113163]

We can't support nonlinear inductions other than neg when vectorizing
early breaks and iteration count is known.

For early break we currently require a peeled epilog but in these cases
we can't compute the remaining values.

gcc/ChangeLog:

	PR middle-end/113163
	* tree-vect-loop-manip.cc (vect_can_peel_nonlinear_iv_p):
	Reject non-linear inductions that aren't supported.

gcc/testsuite/ChangeLog:

	PR middle-end/113163
	* gcc.target/gcn/pr113163.c: New test.